feat: Migrate from SVG to Material Symbols (ICONOS RUTAS) icons  and add color styling for them (INCORPORADA CLASE CSS PARA COLORES DIFICULTAD RUTAS).

--- a/index.html
+++ b/index.html
@@ -166,33 +166,21 @@
                                         <h3>Pico Tres Mares</h3>
                                         <footer class="card-meta">
                                             <button type="button" class="meta-item" aria-describedby="tt-diff-1">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M120-240q-33 0-56.5-23.5T40-320q0-33 23.5-56.5T120-400h10.5q4.5 0 9.5 2l182-182q-2-5-2-9.5V-600q0-33 23.5-56.5T400-680q33 0 56.5 23.5T480-600q0 2-2 20l102 102q5-2 9.5-2h21q4.5 0 9.5 2l142-142q-2-5-2-9.5V-640q0-33 23.5-56.5T840-720q33 0 56.5 23.5T920-640q0 33-23.5 56.5T840-560h-10.5q-4.5 0-9.5-2L678-420q2 5 2 9.5v10.5q0 33-23.5 56.5T600-320q-33 0-56.5-23.5T520-400v-10.5q0-4.5 2-9.5L420-522q-5 2-9.5 2H400q-2 0-20-2L198-340q2 5 2 9.5v10.5q0 33-23.5 56.5T120-240Z" />
-                                                </svg>
+                                                <span class="orange material-symbols-outlined"
+                                                    aria-hidden="true">timeline</span>
                                                 <span>Moderada</span>
                                                 <span class="tooltip" role="tooltip" id="tt-diff-1">Dificultad</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-time-1">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M480-120q-74 0-139.5-28.5T226-226q-49-49-77.5-114.5T120-480q0-44 10-85.5t29-78q19-36.5 45.5-68T264-768l272 272-56 56-216-216q-30 36-47 80.5T200-480q0 116 82 198t198 82q116 0 198-82t82-198q0-107-68.5-184.5T520-756v76h-80v-160h40q74 0 139.5 28.5T734-734q49 49 77.5 114.5T840-480q0 74-28.5 139.5T734-226q-49 49-114.5 77.5T480-120ZM280-440q-17 0-28.5-11.5T240-480q0-17 11.5-28.5T280-520q17 0 28.5 11.5T320-480q0 17-11.5 28.5T280-440Zm200 200q-17 0-28.5-11.5T440-280q0-17 11.5-28.5T480-320q17 0 28.5 11.5T520-280q0 17-11.5 28.5T480-240Zm200-200q-17 0-28.5-11.5T640-480q0-17 11.5-28.5T680-520q17 0 28.5 11.5T720-480q0 17-11.5 28.5T680-440Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined"
+                                                    aria-hidden="true">av_timer</span>
                                                 <span>3h 30m</span>
                                                 <span class="tooltip" role="tooltip" id="tt-time-1">Tiempo
                                                     estimado</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-dist-1">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M480-80q-106 0-173-33.5T240-200q0-24 14.5-44.5T295-280l63 59q-9 4-19.5 9T322-200q13 16 60 28t98 12q51 0 98.5-12t60.5-28q-7-8-18-13t-21-9l62-60q28 16 43 36.5t15 45.5q0 53-67 86.5T480-80Zm1-220q99-73 149-146.5T680-594q0-102-65-154t-135-52q-70 0-135 52t-65 154q0 67 49 139.5T481-300Zm-1 100Q339-304 269.5-402T200-594q0-71 25.5-124.5T291-808q40-36 90-54t99-18q49 0 99 18t90 54q40 36 65.5 89.5T760-594q0 94-69.5 192T480-200Zm0-320q33 0 56.5-23.5T560-600q0-33-23.5-56.5T480-680q-33 0-56.5 23.5T400-600q0 33 23.5 56.5T480-520Zm0-80Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined"
+                                                    aria-hidden="true">pin_drop</span>
                                                 <span>8.5 km</span>
                                                 <span class="tooltip" role="tooltip" id="tt-dist-1">Distancia</span>
                                             </button>
@@ -216,33 +204,21 @@
                                         <h3>Nacimiento del Ebro</h3>
                                         <footer class="card-meta">
                                             <button type="button" class="meta-item" aria-describedby="tt-diff-2">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M120-240q-33 0-56.5-23.5T40-320q0-33 23.5-56.5T120-400h10.5q4.5 0 9.5 2l182-182q-2-5-2-9.5V-600q0-33 23.5-56.5T400-680q33 0 56.5 23.5T480-600q0 2-2 20l102 102q5-2 9.5-2h21q4.5 0 9.5 2l142-142q-2-5-2-9.5V-640q0-33 23.5-56.5T840-720q33 0 56.5 23.5T920-640q0 33-23.5 56.5T840-560h-10.5q-4.5 0-9.5-2L678-420q2 5 2 9.5v10.5q0 33-23.5 56.5T600-320q-33 0-56.5-23.5T520-400v-10.5q0-4.5 2-9.5L420-522q-5 2-9.5 2H400q-2 0-20-2L198-340q2 5 2 9.5v10.5q0 33-23.5 56.5T120-240Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined green"
+                                                    aria-hidden="true">timeline</span>
                                                 <span>Fácil</span>
                                                 <span class="tooltip" role="tooltip" id="tt-diff-2">Dificultad</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-time-2">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M480-120q-74 0-139.5-28.5T226-226q-49-49-77.5-114.5T120-480q0-44 10-85.5t29-78q19-36.5 45.5-68T264-768l272 272-56 56-216-216q-30 36-47 80.5T200-480q0 116 82 198t198 82q116 0 198-82t82-198q0-107-68.5-184.5T520-756v76h-80v-160h40q74 0 139.5 28.5T734-734q49 49 77.5 114.5T840-480q0 74-28.5 139.5T734-226q-49 49-114.5 77.5T480-120ZM280-440q-17 0-28.5-11.5T240-480q0-17 11.5-28.5T280-520q17 0 28.5 11.5T320-480q0 17-11.5 28.5T280-440Zm200 200q-17 0-28.5-11.5T440-280q0-17 11.5-28.5T480-320q17 0 28.5 11.5T520-280q0 17-11.5 28.5T480-240Zm200-200q-17 0-28.5-11.5T640-480q0-17 11.5-28.5T680-520q17 0 28.5 11.5T720-480q0 17-11.5 28.5T680-440Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined"
+                                                    aria-hidden="true">av_timer</span>
                                                 <span>1h 15m</span>
                                                 <span class="tooltip" role="tooltip" id="tt-time-2">Tiempo
                                                     estimado</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-dist-2">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M480-80q-106 0-173-33.5T240-200q0-24 14.5-44.5T295-280l63 59q-9 4-19.5 9T322-200q13 16 60 28t98 12q51 0 98.5-12t60.5-28q-7-8-18-13t-21-9l62-60q28 16 43 36.5t15 45.5q0 53-67 86.5T480-80Zm1-220q99-73 149-146.5T680-594q0-102-65-154t-135-52q-70 0-135 52t-65 154q0 67 49 139.5T481-300Zm-1 100Q339-304 269.5-402T200-594q0-71 25.5-124.5T291-808q40-36 90-54t99-18q49 0 99 18t90 54q40 36 65.5 89.5T760-594q0 94-69.5 192T480-200Zm0-320q33 0 56.5-23.5T560-600q0-33-23.5-56.5T480-680q-33 0-56.5 23.5T400-600q0 33 23.5 56.5T480-520Zm0-80Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined"
+                                                    aria-hidden="true">pin_drop</span>
                                                 <span>3.2 km</span>
                                                 <span class="tooltip" role="tooltip" id="tt-dist-2">Distancia</span>
                                             </button>
@@ -266,33 +242,21 @@
                                         <h3>Cueto de la Horcada</h3>
                                         <footer class="card-meta">
                                             <button type="button" class="meta-item" aria-describedby="tt-diff-3">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M120-240q-33 0-56.5-23.5T40-320q0-33 23.5-56.5T120-400h10.5q4.5 0 9.5 2l182-182q-2-5-2-9.5V-600q0-33 23.5-56.5T400-680q33 0 56.5 23.5T480-600q0 2-2 20l102 102q5-2 9.5-2h21q4.5 0 9.5 2l142-142q-2-5-2-9.5V-640q0-33 23.5-56.5T840-720q33 0 56.5 23.5T920-640q0 33-23.5 56.5T840-560h-10.5q-4.5 0-9.5-2L678-420q2 5 2 9.5v10.5q0 33-23.5 56.5T600-320q-33 0-56.5-23.5T520-400v-10.5q0-4.5 2-9.5L420-522q-5 2-9.5 2H400q-2 0-20-2L198-340q2 5 2 9.5v10.5q0 33-23.5 56.5T120-240Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined red"
+                                                    aria-hidden="true">timeline</span>
                                                 <span>Difícil</span>
                                                 <span class="tooltip" role="tooltip" id="tt-diff-3">Dificultad</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-time-3">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M480-120q-74 0-139.5-28.5T226-226q-49-49-77.5-114.5T120-480q0-44 10-85.5t29-78q19-36.5 45.5-68T264-768l272 272-56 56-216-216q-30 36-47 80.5T200-480q0 116 82 198t198 82q116 0 198-82t82-198q0-107-68.5-184.5T520-756v76h-80v-160h40q74 0 139.5 28.5T734-734q49 49 77.5 114.5T840-480q0 74-28.5 139.5T734-226q-49 49-114.5 77.5T480-120ZM280-440q-17 0-28.5-11.5T240-480q0-17 11.5-28.5T280-520q17 0 28.5 11.5T320-480q0 17-11.5 28.5T280-440Zm200 200q-17 0-28.5-11.5T440-280q0-17 11.5-28.5T480-320q17 0 28.5 11.5T520-280q0 17-11.5 28.5T480-240Zm200-200q-17 0-28.5-11.5T640-480q0-17 11.5-28.5T680-520q17 0 28.5 11.5T720-480q0 17-11.5 28.5T680-440Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined"
+                                                    aria-hidden="true">av_timer</span>
                                                 <span>5h 00m</span>
                                                 <span class="tooltip" role="tooltip" id="tt-time-3">Tiempo
                                                     estimado</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-dist-3">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M480-80q-106 0-173-33.5T240-200q0-24 14.5-44.5T295-280l63 59q-9 4-19.5 9T322-200q13 16 60 28t98 12q51 0 98.5-12t60.5-28q-7-8-18-13t-21-9l62-60q28 16 43 36.5t15 45.5q0 53-67 86.5T480-80Zm1-220q99-73 149-146.5T680-594q0-102-65-154t-135-52q-70 0-135 52t-65 154q0 67 49 139.5T481-300Zm-1 100Q339-304 269.5-402T200-594q0-71 25.5-124.5T291-808q40-36 90-54t99-18q49 0 99 18t90 54q40 36 65.5 89.5T760-594q0 94-69.5 192T480-200Zm0-320q33 0 56.5-23.5T560-600q0-33-23.5-56.5T480-680q-33 0-56.5 23.5T400-600q0 33 23.5 56.5T480-520Zm0-80Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined"
+                                                    aria-hidden="true">pin_drop</span>
                                                 <span>12 km</span>
                                                 <span class="tooltip" role="tooltip" id="tt-dist-3">Distancia</span>
                                             </button>
@@ -316,33 +280,21 @@
                                         <h3>Brañavieja Circular</h3>
                                         <footer class="card-meta">
                                             <button type="button" class="meta-item" aria-describedby="tt-diff-4">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M120-240q-33 0-56.5-23.5T40-320q0-33 23.5-56.5T120-400h10.5q4.5 0 9.5 2l182-182q-2-5-2-9.5V-600q0-33 23.5-56.5T400-680q33 0 56.5 23.5T480-600q0 2-2 20l102 102q5-2 9.5-2h21q4.5 0 9.5 2l142-142q-2-5-2-9.5V-640q0-33 23.5-56.5T840-720q33 0 56.5 23.5T920-640q0 33-23.5 56.5T840-560h-10.5q-4.5 0-9.5-2L678-420q2 5 2 9.5v10.5q0 33-23.5 56.5T600-320q-33 0-56.5-23.5T520-400v-10.5q0-4.5 2-9.5L420-522q-5 2-9.5 2H400q-2 0-20-2L198-340q2 5 2 9.5v10.5q0 33-23.5 56.5T120-240Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined orange"
+                                                    aria-hidden="true">timeline</span>
                                                 <span>Moderada</span>
                                                 <span class="tooltip" role="tooltip" id="tt-diff-4">Dificultad</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-time-4">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M480-120q-74 0-139.5-28.5T226-226q-49-49-77.5-114.5T120-480q0-44 10-85.5t29-78q19-36.5 45.5-68T264-768l272 272-56 56-216-216q-30 36-47 80.5T200-480q0 116 82 198t198 82q116 0 198-82t82-198q0-107-68.5-184.5T520-756v76h-80v-160h40q74 0 139.5 28.5T734-734q49 49 77.5 114.5T840-480q0 74-28.5 139.5T734-226q-49 49-114.5 77.5T480-120ZM280-440q-17 0-28.5-11.5T240-480q0-17 11.5-28.5T280-520q17 0 28.5 11.5T320-480q0 17-11.5 28.5T280-440Zm200 200q-17 0-28.5-11.5T440-280q0-17 11.5-28.5T480-320q17 0 28.5 11.5T520-280q0 17-11.5 28.5T480-240Zm200-200q-17 0-28.5-11.5T640-480q0-17 11.5-28.5T680-520q17 0 28.5 11.5T720-480q0 17-11.5 28.5T680-440Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined"
+                                                    aria-hidden="true">av_timer</span>
                                                 <span>2h 45m</span>
                                                 <span class="tooltip" role="tooltip" id="tt-time-4">Tiempo
                                                     estimado</span>
                                             </button>
                                             <button type="button" class="meta-item" aria-describedby="tt-dist-4">
-                                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="16"
-                                                    viewBox="0 -960 960 960" width="16" fill="currentColor"
-                                                    class="svg-inline">
-                                                    <path
-                                                        d="M480-80q-106 0-173-33.5T240-200q0-24 14.5-44.5T295-280l63 59q-9 4-19.5 9T322-200q13 16 60 28t98 12q51 0 98.5-12t60.5-28q-7-8-18-13t-21-9l62-60q28 16 43 36.5t15 45.5q0 53-67 86.5T480-80Zm1-220q99-73 149-146.5T680-594q0-102-65-154t-135-52q-70 0-135 52t-65 154q0 67 49 139.5T481-300Zm-1 100Q339-304 269.5-402T200-594q0-71 25.5-124.5T291-808q40-36 90-54t99-18q49 0 99 18t90 54q40 36 65.5 89.5T760-594q0 94-69.5 192T480-200Zm0-320q33 0 56.5-23.5T560-600q0-33-23.5-56.5T480-680q-33 0-56.5 23.5T400-600q0 33 23.5 56.5T480-520Zm0-80Z" />
-                                                </svg>
+                                                <span class="material-symbols-outlined"
+                                                    aria-hidden="true">pin_drop</span>
                                                 <span>6 km</span>
                                                 <span class="tooltip" role="tooltip" id="tt-dist-4">Distancia</span>
                                             </button>
