--- a/index.html
+++ b/index.html
@@ -96,19 +96,22 @@
                             <a href="#" class="lang-close-overlay"></a>
                         </nav>
                     </div>
+                    <input type="checkbox" id="menu-logic-state" class="menu-logic-check">
 
-                    <a href="#mobile-menu" class="hamburger" aria-label="Abrir menú de navegación">
-                        <span class="material-symbols-outlined">menu</span>
-                    </a>
+                    <label for="menu-logic-state" class="hamburger">
+                        <span class="material-symbols-outlined" aria-hidden="true">menu</span>
+                        <span class="visually-hidden">Abrir menú de navegación</span>
+                    </label>
 
-                    <nav id="mobile-menu" class="mobile-menu" aria-label="Navegación móvil">
+                    <nav class="mobile-menu" aria-label="Navegación móvil">
                         <div class="mobile-menu-header">
-                            <a href="#" class="close-trigger" aria-label="Cerrar menú">
-                                <span class="material-symbols-outlined">close</span>
-                            </a>
+                            <label for="menu-logic-state" class="close-trigger">
+                                <span class="material-symbols-outlined" aria-hidden="true">close</span>
+                                <span class="visually-hidden">Cerrar menú de navegación</span>
+                            </label>
                         </div>
                         <ul class="mobile-nav-list">
-                            <li><a href="index.html#top">Inicio</a></li>
+                            <li><a href="index.html">Inicio</a></li>
                             <li><a href="rutas.html">Rutas</a></li>
                             <li><a href="novedades.html">Novedades</a></li>
                             <li><a href="actividades.html">Actividades</a></li>
@@ -116,7 +119,7 @@
                         </ul>
                     </nav>
 
-                    <a href="#" class="mobile-menu-overlay" aria-hidden="true"></a>
+                    <label for="menu-logic-state" class="mobile-menu-overlay"></label>
                 </div>
             </div>
         </header>
